# bioinf-mutation-finder

./: Align.cpp  Align.h  Base.h  CMakeLists.txt  DataFetcher.cpp  DataFetcher.h  Dokumentacija.doc  Functions.cpp  Functions.h  Hirschberg.cpp  Index.cpp  Index.h  LICENSE  LIS.cpp  LIS.h  Minimizer.cpp  Minimizer.h  Mutation.cpp  Mutation.h  Prezentacija.pptx  README.md  align_demo.cpp  index_demo.cpp  inverter_demo.cpp  main.cpp  mapping_demo.cpp  minimizer_demo.cpp  test.cpp
actual_mappings/: mini.paf
results/: results_ecoli.csv  results_lam.csv
src/: DataLoader.cpp  DataLoader.h  Mutation.cpp  main.cpp
src/alignment/: Align.cpp  Hirschberg.cpp  Hirschberg.h
src/mapping/: mapping_demo.cpp
src/mapping/index/: Index.cpp  Index.h  index_demo.cpp
src/mapping/inverter/: Inverter.cpp  Inverter.h
src/mapping/lis/: LIS.h  LIS_demo.cpp
tests/: CMakeLists.txt  LIS_test.cpp
